# ig-brokers

./: Cargo.toml  README.md
src/: api.rs  auth.rs  client.rs  config.rs  ig.rs  lib.rs  models.rs
src/api/: account.rs  client.rs  client_sentiment.rs  config.rs  dealing.rs  general.rs  ig.rs  login.rs  market.rs  markets.rs  watchlists.rs
src/models/: account.rs  client_sentiment.rs  dealing.rs  general.rs  login.rs  markets.rs  watchlists.rs
