[package]
name = "ig"
version = "0.1.0"
authors = ["Matthew Satti <matthewsatti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_qs = "0.8.4"
