[package]
name = "ig-brokers"
description = "Rust library for the IG REST API"
homepage = "https://satnav.github.io/ig-brokers"
documentation = "https://satnav.github.io/ig-brokers"
repository = "https://github.com/satnav/ig-brokers"
keywords = ["ig", "api", "brokers", "investing", "trading"]
categories = ["api-bindings"]
version = "0.0.1"
authors = ["Matthew Satti <matthewsatti@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.117", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"

[dev-dependencies]
dotenv = "0.15.0"
